--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ img {
 .header-item {}
 
 .header-link {
+    position: relative;
     color: #2E2F42;
     font-size: 16px;
     font-weight: 500;
@@ -84,6 +85,18 @@ img {
     letter-spacing: 0.02em;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current::after {
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    content: '';
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404BBF;
 }
 
 .header-link:hover,
@@ -108,6 +121,7 @@ img {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-link:hover,
@@ -124,6 +138,11 @@ img {
     background-color: #2E2F42;
     padding-top: 188px;
     padding-bottom: 188px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 
@@ -156,6 +175,7 @@ img {
     margin: 0 auto;
     min-width: 169px;
     height: 56px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -197,6 +217,18 @@ img {
     border-radius: 0px 0px 4px 4px;
     
 }
+
+.about-item-container{
+    width: 100%;
+    border-radius: 4px;
+    background: #F4F4FD;
+    border: 1px solid #8E8F99;
+    padding: 24px ;
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.about-item-icon{}
 
 .about-subtitle {
     color: #2E2F42;
@@ -246,6 +278,7 @@ img {
     background-color: #FFF;
     max-width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .members-img {
@@ -272,8 +305,39 @@ img {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    margin: 0;
+    margin-bottom: 8px;
 }
+
+.members-soc-list {
+    display: flex;
+    gap: 24px;
+    justify-content: space-between;
+    padding: 0 16px;
+}
+
+.members-soc-item {
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    flex-shrink: 0;
+    width: 40px;
+    height: 40px;
+    padding: 12px 12px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.members-soc-item:hover {
+    background-color: #404BBF;
+}
+
+.members-soc-link {
+    width: 100%;
+    height: 100%;
+}
+
+.members-soc-icon {
+    fill: #F4F4FD;
+}
+
 
 /* ================================ */
 
@@ -305,11 +369,42 @@ img {
 
 .portfolio-list-item {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.portfolio-list-item:hover {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list-item:hover .portfolio-cover-container {
+    transform: translateY(0);
+}
+
+.portfolio-cover-wrap{
+    position: relative;
+    overflow: hidden;
 }
 
 .portfolio-img {
-    display: block;
+}
+
+.portfolio-cover-container{
+    background-color: #4D5AE5;
+    padding: 0 32px;
+    padding-top: 40px;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 300ms linear;
+}
+
+.portfolio-cover-text{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
 }
 
 .portfolio-card {
@@ -347,10 +442,10 @@ img {
     padding: 100px 0;
 }
 
-/* .footer-container {
+.footer-container {
 display: flex;
-gap: 18px;
-} */
+gap: 120px;
+}
 
 .footer-logo {
     color: #4D5AE5;
@@ -375,6 +470,46 @@ gap: 18px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     width: 264px;
+}
+
+.footer-title {
+    color: #FFF;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    font-size: 16px;
+    margin-bottom: 16px;
+}
+
+.footer-soc-list {
+    display: flex;
+    gap: 16px;
+    justify-content: space-between;
+    width: 208px;
+}
+
+.footer-soc-item {
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    flex-shrink: 0;
+    width: 40px;
+    height: 40px;
+    padding: 8px 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-soc-item:hover {
+    background-color: #31D0AA;
+    
+}
+
+.footer-soc-link {
+    width: 100%;
+    height: 100%;
+}
+
+.footer-soc-icon {
+    fill: #F4F4FD;
 }
 
 /* ================================ */
