--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ img {
 
 .header {
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -86,6 +87,10 @@ img {
     padding: 24px 0;
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current {
+    color: #404bbf;
 }
 
 .current::after {
@@ -140,6 +145,7 @@ img {
     padding-bottom: 188px;
     background-repeat: no-repeat;
     background-position: center center;
+    background-size: cover;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     max-width: 1440px;
     margin: 0 auto;
@@ -224,8 +230,11 @@ img {
     background: #F4F4FD;
     border: 1px solid #8E8F99;
     padding: 24px ;
-    text-align: center;
     margin-bottom: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 112px;
 }
 
 .about-item-icon{}
@@ -311,27 +320,31 @@ img {
 .members-soc-list {
     display: flex;
     gap: 24px;
-    justify-content: space-between;
-    padding: 0 16px;
+    justify-content: center;
+    
 }
 
 .members-soc-item {
-    background-color: #4D5AE5;
-    border-radius: 50%;
-    flex-shrink: 0;
-    width: 40px;
-    height: 40px;
-    padding: 12px 12px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
-.members-soc-item:hover {
+.members-soc-item:hover,
+.members-soc-item:focus {
     background-color: #404BBF;
 }
 
 .members-soc-link {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
+    flex-shrink: 0;
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #4D5AE5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .members-soc-icon {
