--- a/css/styles.css
+++ b/css/styles.css
@@ -325,11 +325,12 @@ img {
 }
 
 .members-soc-item {
-
+width: 40px;
+    height: 40px;
 }
 
-.members-soc-item:hover,
-.members-soc-item:focus {
+.members-soc-link:hover,
+.members-soc-link:focus {
     background-color: #404BBF;
 }
 
@@ -338,8 +339,7 @@ img {
     height: 100%;
     border-radius: 50%;
     flex-shrink: 0;
-    width: 40px;
-    height: 40px;
+    
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #4D5AE5;
     display: flex;
@@ -389,7 +389,7 @@ img {
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-list-item:hover .portfolio-cover-container {
+.portfolio-list-item:hover .portfolio-cover-text {
     transform: translateY(0);
 }
 
@@ -402,15 +402,7 @@ img {
 }
 
 .portfolio-cover-container{
-    background-color: #4D5AE5;
-    padding: 0 32px;
-    padding-top: 40px;
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 300ms linear;
-}
+    }
 
 .portfolio-cover-text{
     font-size: 16px;
@@ -418,6 +410,13 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
+    background-color: #4D5AE5;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transform: translateY(100%);
+    padding: 40px 32px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-card {
