--- a/css/styles.css
+++ b/css/styles.css
@@ -401,9 +401,6 @@ width: 40px;
 .portfolio-img {
 }
 
-.portfolio-cover-container{
-    }
-
 .portfolio-cover-text{
     font-size: 16px;
     font-weight: 400;
@@ -456,7 +453,11 @@ width: 40px;
 
 .footer-container {
 display: flex;
-gap: 120px;
+align-items: baseline;
+}
+
+.footer-style-container {
+    margin-right: 120px;
 }
 
 .footer-logo {
@@ -501,23 +502,26 @@ gap: 120px;
 }
 
 .footer-soc-item {
-    background-color: #4D5AE5;
-    border-radius: 50%;
-    flex-shrink: 0;
     width: 40px;
     height: 40px;
-    padding: 8px 8px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-soc-item:hover {
+.footer-soc-link:hover,
+.footer-soc-link:focus {
     background-color: #31D0AA;
-    
 }
 
 .footer-soc-link {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
+    flex-shrink: 0;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #4D5AE5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-soc-icon {
